# jpkeyborad

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
data/: romaji_table.txt
scripts/: download_dict.sh  setup_freebsd.sh
src/: candidate_window.c  candidate_window.h  dict.c  dict.h  engine.c  engine.h  kana_kanji.c  kana_kanji.h  main.c  predict.c  predict.h  romaji.c  romaji.h  user_dict.c  user_dict.h  util.c  util.h  xim_server.c  xim_server.h
test/: test_dict.c  test_romaji.c
